# learnbotics

src/gazebo_light_sensor_plugin/: package.xml
src/gazebo_light_sensor_plugin/launch/: main.launch
src/gazebo_light_sensor_plugin/urdf/: camera.xacro
src/learnbotics/: CMakeLists copy.txt  CMakeLists.txt  package.xml
src/learnbotics/include/: velodyne_plugin.h
src/learnbotics/launch/: main.launch  test_velodyne.launch
src/learnbotics/meshes/: bol.stl  capa.stl  wheel.stl
src/learnbotics/src/: velodyne_plugin copy 2.cpp  velodyne_plugin copy.cpp  velodyne_plugin.cpp
src/learnbotics/urdf/: camera.xacro  robot.gazebo  robot.xacro  velodyne.xacro
